<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LaunchActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_text"
            style="@style/text_view_heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/text_view_home_title"/>

        <Button android:id="@+id/spotify_button"
            style="@style/button_style_orange"
            android:text="@string/button_spotify_project"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny" />

        <Button android:id="@+id/scores_button"
            style="@style/button_style_orange"
            android:text="@string/button_scores_project"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny" />

        <Button android:id="@+id/library_button"
            style="@style/button_style_orange"
            android:text="@string/button_library_project"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny" />

        <Button android:id="@+id/bigger_button"
            style="@style/button_style_orange"
            android:text="@string/button_bigger_project"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny" />

        <Button android:id="@+id/reader_button"
            style="@style/button_style_orange"
            android:text="@string/button_reader_project"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny" />

        <Button android:id="@+id/capstone_button"
            style="@style/button_style_blue"
            android:text="@string/button_capstone_project"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny" />

    </LinearLayout>

</ScrollView>
